--- a/contacto.html
+++ b/contacto.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <title>Desarrollo de apps multiplataforma</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
-    <!-- MENU ENCABEZADO / BARRA DE NAVEGACION -->
+    <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
             <div class="logo">
@@ -19,14 +20,14 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="skills.html">skills</a></li>
-                    <li><a href="portafolio.html">portafolio</a></li>
-                    <li><a href="publicaciones.html">publicaciones</a></li>
-                    <li><a href="contacto.html" class="active">contacto</a></li>
+                    <li><a href="index.html" onclick="seleccionar()">Inicio</a></li>
+                    <li><a href="skills.html" onclick="seleccionar()">Habilidades</a></li>
+                    <li><a href="portafolio.html" onclick="seleccionar()">portafolio</a></li>
+                    <li><a href="publicaciones.html" onclick="seleccionar()">publicaciones</a></li>
+                    <li><a href="contacto.html" class="active" onclick="seleccionar()">contacto</a></li>
                 </ul>
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
@@ -35,7 +36,7 @@
     <!-- SECCION CONTACTO -->
     <section id="contacto" class="contacto">
         <div class="contenido-seccion">
-            <h2>Contacto</h2>
+            <h2>CONTACTO</h2>
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
@@ -45,23 +46,24 @@
                     <input type="text" placeholder="Tema">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
                     <button>
-                            Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
-                            <span class="overlay"></span>
-                        </button>
+                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3358.864745784507!2d-115.46878779296911!3d32.66304322342888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d77008bfc94543%3A0xcde39228ab80d437!2sUniversidad%20Aut%C3%B3noma%20de%20Baja%20California!5e0!3m2!1ses!2smx!4v1740250785203!5m2!1ses!2smx"
+                        width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="info">
                         <ul>
                             <li>
-                                <i class="fa-solid fa-location-dot"></i> Av. Álvaro Obregón y Julián Carrillo s/n Edificio de Rectoría Col. Nueva, C.P. 021100 Mexicali Baja California, México
+                                <i class="fa-solid fa-location-dot"></i> Nicaragua 159, San Rafael Mza
                             </li>
                             <li>
-                                <i class="fa-solid fa-mobile-screen"></i> Llamanos: +52 (686) 551-82-30
+                                <i class="fa-solid fa-mobile-screen"></i> Llamanos: 2384 - 4343443
                             </li>
                             <li>
-                                <i class="fa-solid fa-envelope"></i> Email: <a href="mailto:gilberto.jimenez@uabc.edu.mx">gilberto.jimenez@uabc.edu.mx</a>
+                                <i class="fa-solid fa-envelope"></i> Email: cw@example.com
                             </li>
                         </ul>
                     </div>
@@ -70,6 +72,7 @@
         </div>
     </section>
 
+    <script src="js/script.js"></script>
 </body>
 
 </html>
