--- a/publicaciones.html
+++ b/publicaciones.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <title>Desarrollo de apps multiplataforma</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
-    <!-- MENU ENCABEZADO / BARRA DE NAVEGACION -->
+    <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
             <div class="logo">
@@ -19,14 +20,14 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="skills.html">skills</a></li>
-                    <li><a href="portafolio.html">portafolio</a></li>
-                    <li><a href="publicaciones.html" class="active">publicaciones</a></li>
-                    <li><a href="contacto.html">contacto</a></li>
+                    <li><a href="index.html" onclick="seleccionar()">Inicio</a></li>
+                    <li><a href="skills.html" onclick="seleccionar()">Habilidades</a></li>
+                    <li><a href="portafolio.html" onclick="seleccionar()">portafolio</a></li>
+                    <li><a href="publicaciones.html" class="active" onclick="seleccionar()">publicaciones</a></li>
+                    <li><a href="contacto.html" onclick="seleccionar()">contacto</a></li>
                 </ul>
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
@@ -100,7 +101,7 @@
         </div>
     </section>
 
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
